    . vpDisplay::displayCharString() is marked deprecated. Use vpDisplay::displayText() instead
    . vpHinkley class is deprecated, in favor of vpStatisticalTestHinkley
  - New features and improvements
    . Introduce Python bindings for most of ViSP modules and classes (see corresponding tutorial)
    . OpenCV 2.4.8 is the minimal supported version
    . Introduce applications in apps folder, a collection of useful tools that
      have a dependency to the install target
    . Speed up build by including only opencv2/opencv_modules.hpp instead of opencv2/opencv.hpp header in vpConfig.h
    . In imgproc module, implementation of automatic gamma factor computation methods for gamma correction.
    . Eliminate the use of pthread in favour of std::thread
  - Applications
    . Migrate eye-to-hand tutorials in apps
  - Tutorials
    . Update tutorial: How to use Blender to generate simulated data for model-based tracking
      experiments with step by step detailed explanations
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-tracking-mb-generic-rgbd-Blender.html
    . New tutorial: Installation from prebuilt Conda packages for Linux / OSX / Windows
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-install-conda-package.html
    . New tutorial: Using Statistical Process Control to monitor your signal
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-spc.html
    . New tutorial: Installing ViSP Python bindings
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-install-python-bindings.html
  - Bug fixed
    . [#1251] Bug in vpDisplay::displayFrame()
    . [#1270] Build issue around std::clamp and optional header which are not found with cxx17
      standard enabled
    . [#1272] Unable to build ViSP with PCL/VTK build from source, VTK headers are not found by ViSP
    . [#1273] Build error in visp_java without deprecated functionalities
    . [#1274] Build issue no member named clamp in namespace std