@@ -5,15 +5,19 @@
 
 \section install_docker_intro Introduction
 
-Even with the detailed and tested \ref tutorial_install_src tutorials, sometimes it is tough for people to get a system up and running with ViSP. That's why in this tutorial we explain how to get ready to use Docker images that contains ViSP source code with already build tests, examples and tutorials that you may just run to discover ViSP capabilities.
+Even with the detailed and tested \ref tutorial_install_src tutorials, sometimes it is tough for people to get a system
+up and running with ViSP. That's why in this tutorial we explain how to get ready to use Docker images that contains
+ViSP source code with already build tests, examples and tutorials that you may just run to discover ViSP capabilities.
 
-Our Docker images available on [Docker Hub](https://hub.docker.com/repository/docker/vispci/vispci) are around 1 GB in size (compressed size) and contain minimal things to discover and start to play with ViSP.
+Our Docker images available on [Docker Hub](https://hub.docker.com/repository/docker/vispci/vispci) are around 1 GB in
+size (compressed size) and contain minimal things to discover and start to play with ViSP.
 
-\section install_docker_engine Install Docker Engine
+\section install_docker_engine Prerequisites: Install Docker Engine
 
 \subsection install_docker_engine_ubuntu On Ubuntu host
 
-As mentioned [here](https://docs.docker.com/engine/install/ubuntu/), to install Docker Engine on Ubuntu host using the repository, follow the instructions:
+As mentioned [here](https://docs.docker.com/engine/install/ubuntu/), to install Docker Engine on Ubuntu host using the
+repository, follow the instructions:
 
 - Update the apt package index and install packages to allow apt to use a repository over HTTPS:
 \verbatim
@@ -35,9 +39,9 @@ $ curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
 - Use the following command to set up the stable repository
 \verbatim
 $ sudo add-apt-repository \
-   "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
-   $(lsb_release -cs) \
-   stable"
+    "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+    $(lsb_release -cs) \
+    stable"
 \endverbatim
 
 - Update the apt package index, and install the latest version of Docker Engine and containerd
@@ -46,161 +50,174 @@ $ sudo apt-get update
 $ sudo apt-get install docker-ce docker-ce-cli containerd.io
 \endverbatim
 
-
 \subsection install_docker_engine_mac On MacOS host
 
-- To install Docker Engine on MacOS host, first go to the [Docker Store](https://hub.docker.com/editions/community/docker-ce-desktop-mac) and download Docker Desktop for Mac.
+- To install Docker Engine on MacOS host, first go to the
+  [Docker Store](https://hub.docker.com/editions/community/docker-ce-desktop-mac) and download Docker Desktop for Mac.
 
 - Double-click Docker.dmg to open the installer, then drag Moby the whale to the Applications folder.
 
 - Double-click Docker.app in the Applications folder to start Docker.
 
-- You are prompted to authorize Docker.app with your system password after you launch it. Privileged access is needed to install networking components and links to the Docker apps.
+- You are prompted to authorize Docker.app with your system password after you launch it. Privileged access is needed
+  to install networking components and links to the Docker apps.
 
-\section install_docker_visp Install Docker ViSP images
+- In order to run GUIs from the container, you will need to:
+  - Install [XQuartz](https://www.xquartz.org/) 2.7.11 or later
+  - After installing XQuartz, start it and open XQuartz -> Preferences from the menu bar. Go to the last tab, Security,
+    and enable both "Allow connections from network clients" and "Authenticate connections" checkboxes and restart XQuartz.
+    \image html img-xquartz-security.jpg
+  - Now your Mac will be listening on port 6000 for X11 connections. Record the IP Address of your Mac as you will need
+    it in your containers.
+  - Restart X11 server or reboot your Mac to take into account previous changes
 
-In [Docker Hub](https://hub.docker.com/repository/docker/vispci/vispci) we provide various ready to use Docker images with ViSP already built that could be used on an Ubuntu or MacOS host.
+\section docker_visp_pull Pull existing docker image
 
-\subsection install_docker_visp_ubuntu_18_04 Ubuntu 18.04 image
+In [Docker Hub](https://hub.docker.com/repository/docker/vispci/vispci), we provide several ready-to-use Docker
+images that can be used on an Ubuntu or macOS host with ViSP already built. Instead, there is also the possibility to
+build docker images from a `Dockerfile` following instruction given in \ref docker_visp_build section.
 
-\note The `Dockerfile` used to generate this image is available [here](https://github.com/lagadic/visp/blob/master/ci/docker/ubuntu-18.04/Dockerfile).
+\subsection docker_visp_pull_ubuntu_18_04 Pull Ubuntu 18.04 image
 
-To use the docker image installed on an Ubuntu 18.04 system, use the following instructions:
 \verbatim
 $ docker pull vispci/vispci:ubuntu-18.04
-$ docker run -it vispci/vispci:ubuntu-18.04
 \endverbatim
 
-Within the container, ViSP workspace is installed in `$HOME/visp-ws` folder:
-\verbatim
-[root@7152a1ec64ba]# ls $HOME/visp-ws
-visp  visp-build  visp-images
-\endverbatim
+\subsection docker_visp_pull_ubuntu_20_04 Pull Ubuntu 20.04 image
 
-- In `visp` folder you will find a [Github](https://github.com/lagadic/visp) clone of the source code. To update its content with the last changes, run `cd visp; git pull`
-- In `visp-build` folder you will find ViSP libraries and all the build binaries corresponding to the tests, examples and tutorials. If you updated `visp` folder content, don't forget to refresh your build with `cd visp-build; cmake ../visp; make`
-- In `visp-images` folder you will find the dataset used by the tests and examples.
-
-\subsection install_docker_visp_ubuntu_20_04 Ubuntu 20.04 image
-
-\note The `Dockerfile` used to generate this image is available [here](https://github.com/lagadic/visp/blob/master/ci/docker/ubuntu-20.04/Dockerfile).
-
-To use the docker image installed on an Ubuntu 20.04 system, use the following instructions:
 \verbatim
 $ docker pull vispci/vispci:ubuntu-20.04
-$ docker run -it vispci/vispci:ubuntu-20.04
 \endverbatim
 
-Within the container, ViSP workspace is installed in `$HOME/visp-ws` folder:
+\subsection docker_visp_pull_ubuntu_22_04 Pull Ubuntu 22.04 image
+
 \verbatim
-[root@7152a1ec64ba]# ls $HOME/visp-ws
-visp  visp-build  visp-images
+$ docker pull vispci/vispci:ubuntu-22.04
 \endverbatim
 
-- In `visp` folder you will find a [Github](https://github.com/lagadic/visp) clone of the source code. To update its content with the last changes, run `cd visp; git pull`
-- In `visp-build` folder you will find ViSP libraries and all the build binaries corresponding to the tests, examples and tutorials. If you updated `visp` folder content, don't forget to refresh your build with `cd visp-build; cmake ../visp; make`
-- In `visp-images` folder you will find the dataset used by the tests and examples.
+\section docker_visp_build Build docker image from Dockerfile
 
-\section install_docker_run Run Docker ViSP images
+We suppose here that you cloned ViSP from github in your workspace.
 
-\subsection install_docker_run_ubuntu On Ubuntu host
+Change directory to access the `Dockerfile` and build the corresponding docker image
 
-\note The following instructions refer to \ref install_docker_visp_ubuntu_20_04, but could be easily adapted to any other image.
+\subsection docker_visp_build_ubuntu_18_04 Build Ubuntu 18.04 image
 
-With Docker installed on a Ubuntu host, when you run ViSP binaries that open GUI window to display for example an image you will get the following error:
 \verbatim
-$ docker pull vispci/vispci:ubuntu-20.04
-$ docker run -it vispci/vispci:ubuntu-20.04
-[root@7152a1ec64ba]# cd $HOME/visp-ws/visp-build/tutorial/image
-[root@7152a1ec64ba]# ./tutorial-viewer monkey.png
-Catch an exception: Error [2]:	Can't connect display on server .
+$ cd $VISP_WS/visp/ci/docker/ubuntu-18.04
+$ docker build -t vispci/vispci:ubuntu-18.04 .
 \endverbatim
 
-In order to run GUIs from the container, you will need to:
-- Determine the IP Address of your Ubuntu host
+\subsection docker_visp_build_ubuntu_20_04 Build Ubuntu 20.04 image
+
 \verbatim
-...
-wlp2s0: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
-        inet 192.168.1.5  netmask 255.255.255.0  broadcast 192.168.1.255
-...
+$ cd $VISP_WS/visp/ci/docker/ubuntu-20.04
+$ docker build -t vispci/vispci:ubuntu-20.04 .
 \endverbatim
-- Allow access to the X11 server
+
+\subsection docker_visp_build_ubuntu_22_04 Build Ubuntu 22.04 image
+
 \verbatim
-$ xhost +
-access control disabled, clients can connect from any host
+$ cd $VISP_WS/visp/ci/docker/ubuntu-22.04
+$ docker build -t vispci/vispci:ubuntu-22.04 .
 \endverbatim
-- Start or connect to your Docker container.
-\verbatim
-$ docker run --device=/dev/video0:/dev/video0 -v /tmp/.X11-unix:/tmp/.X11-unix -e DISPLAY=$DISPLAY -it vispci/vispci:ubuntu-20.04
-\endverbatim
+
+\section docker_visp_start Start ViSP container
+
+\subsection docker_visp_start_ubuntu On Ubuntu host
+
+- On your computer running Ubuntu, allow access to the X11 server
+
+      $ xhost +local:docker
+      non-network local connections being added to access control list
+
+- Run your Docker container. The following command connects to the ubuntu-22.04 Docker container.
+  It can be easily adapted to any other container name.
+
+      $ docker run --rm -it --network=host --privileged \
+                --env=DISPLAY \
+                --env=QT_X11_NO_MITSHM=1 \
+                --volume=/tmp/.X11-unix:/tmp/.X11-unix:rw \
+                --volume=/dev:/dev \
+                vispci/vispci:ubuntu-22.04
+      vispci@6c8d67579659:~$ pwd
+      /home/vispci
+
+
+\subsection docker_visp_start_macos On MacOS host
+
+- Get your MacOS computer IP address
+
+      $ IP=$(/usr/sbin/ipconfig getifaddr en0)
+      $ echo $IP
+      $ 192.168.1.18
+
+- Allow connections from MacOS to XQuartz
+
+      $ xhost + "$IP"
+      192.168.1.18 being added to access control list
+
+- Run your Docker container. The following command connects to the ubuntu-22.04 Docker container.
+  It can be easily adapted to any other container name.
+
+      $ docker run --rm -it --network=host --privileged \
+                --env=DISPLAY="${IP}:0" \
+                --env=QT_X11_NO_MITSHM=1 \
+                --volume=/tmp/.X11-unix:/tmp/.X11-unix:rw \
+                --volume=/dev:/dev \
+                vispci/vispci:ubuntu-22.04
+      vispci@6c8d67579659:~$ pwd
+      /home/vispci
+
+\section docker_visp_usage How to use ViSP container
+
+- We suppose here that you successfully \ref docker_visp_start using one of the previous command:
+
+      $ docker run ... -it vispci/vispci:ubuntu-<version>
+
+- Within the container, ViSP workspace is installed in `$HOME/visp-ws` folder:
+
+      vispci@6c8d67579659:~$ ls $HOME/visp-ws
+      visp  visp-build  visp-images
+
+  - In `visp` folder you will find a [Github](https://github.com/lagadic/visp) clone of the source code. To update its
+    content with the last changes, run:
+
+        cd $HOME/visp-ws/visp; git pull
+
+  - In `visp-build` folder you will find ViSP libraries and all the build binaries corresponding to the tests, examples
+    and tutorials. If you updated `visp` folder content, don't forget to refresh your build with:
+
+        cd $HOME/visp-ws/visp-build; cmake ../visp; make -j$(nproc)
+
+  - In `visp-images` folder you will find the dataset used by the tests and examples.
+
 - You are now ready to run binaries that open GUI
-\verbatim
-[root@7152a1ec64ba]# cd $HOME/visp-ws/visp-build/tutorial/image
-[root@7152a1ec64ba]# ./tutorial-viewer monkey.png
-A click to quit...
-\endverbatim
-\image html img-monkey.png·
-- You are now also ready to run binaries that require access to your camera
-\verbatim
-[root@7152a1ec64ba]# cd $HOME/visp-ws/visp-build/tutorial/grabber
-[root@7152a1ec64ba]# ./tutorial-grabber-v4l2
-Use device : 0
-Recording  : disabled
-Warning: cannot set input channel to 2
-Image size : 640 480
-\endverbatim
-or with this other tutorial
-\verbatim
-[root@7152a1ec64ba]# ./tutorial-grabber-opencv
-Use device : 0
-Recording  : disabled
-\endverbatim
 
-\subsection install_docker_run_mac On MacOS host
+      vispci@6c8d67579659:~$ cd $HOME/visp-ws/visp-build/tutorial/image
+      vispci@6c8d67579659:~$ ./tutorial-viewer monkey.png
+      A click to quit...
 
-\note The following instructions refer to \ref install_docker_visp_ubuntu_20_04, but could be easily adapted to any other image.
+  \image html img-monkey.png
 
-With Docker installed on a MacOS host, when you run ViSP binaries that open GUI window to display for example an image you will get the following error:
-\verbatim
-$ docker pull vispci/vispci:ubuntu-20.04
-$ docker run -it vispci/vispci:ubuntu-20.04
-[root@7152a1ec64ba]# cd $HOME/visp-ws/visp-build/tutorial/image
-[root@7152a1ec64ba]# ./tutorial-viewer monkey.png
-Catch an exception: Error [2]:	Can't connect display on server .
-\endverbatim
+- If you are on an Ubuntu host, you are now ready to run binaries that require access to your camera.
 
-In order to run GUIs from the container, you will need to:
-- Install [XQuartz](https://www.xquartz.org/) 2.7.11 or later
-- After installing XQuartz, start it and open XQuartz -> Preferences from the menu bar. Go to the last tab, Security, and enable both "Allow connections from network clients" and "Authenticate connections" checkboxes and restart XQuartz.
-\image html img-xquartz-security.jpg
-- Now your Mac will be listening on port 6000 for X11 connections. Record the IP Address of your Mac as you will need it in your containers.
-\verbatim
-$ ifconfig en0 | grep inet | awk '$1=="inet" {print $2}'
-192.168.1.18
-\endverbatim
-- Add the IP Address of your Mac to the X11 allowed list.
-\verbatim
-$ xhost + 192.168.1.18
-192.168.1.18 being added to access control list
-\endverbatim
-- Start or connect to your Docker container.
-\verbatim
-$ docker run -it vispci/vispci:ubuntu-20.04
-\endverbatim
-- Export the `DISPLAY` variable within your container.
-\verbatim
-[root@7152a1ec64ba]# export DISPLAY=192.168.1.18:0
-\endverbatim
-- You are now ready to run binaries that open GUI
-\verbatim
-[root@7152a1ec64ba]# cd $HOME/visp-ws/visp-build/tutorial/image
-[root@7152a1ec64ba]# ./tutorial-viewer monkey.png
-A click to quit...
-\endverbatim
-\image html img-monkey.png·
+      vispci@6c8d67579659:~$ cd $HOME/visp-ws/visp-build/tutorial/grabber
+      vispci@6c8d67579659:~$ ./tutorial-grabber-v4l2
+      Use device : 0
+      Recording  : disabled
+      Warning: cannot set input channel to 2
+      Image size : 640 480
+
+  or with this other tutorial
+
+      vispci@6c8d67579659:~$  ./tutorial-grabber-opencv
+      Use device : 0
+      Recording  : disabled
 
 \section install_docker_next Next tutorial
 
-You are now ready to see the next \ref tutorial-getting-started that will show you how to use ViSP as a 3rd party to build your own project.
+You are now ready to see the next \ref tutorial-getting-started that will show you how to use ViSP as a 3rd party to
+build your own project.
 
 */
