@@ -23,6 +23,8 @@ ViSP 3.x.x (Version in development)
     . vpHinkley class is deprecated, in favor of vpStatisticalTestHinkley
   - New features and improvements
     . Introduce Python bindings for most of ViSP modules and classes (see corresponding tutorial)
+    . Updated Dockerfile in ci/docker folder for Ubuntu 18.04, 20.04 and 22.04. Corresponding images are also available
+      ready to use on DockerHub https://hub.docker.com/repository/docker/vispci/vispci/general
     . OpenCV 2.4.8 is the minimal supported version
     . Introduce applications in apps folder, a collection of useful tools that
       have a dependency to the install target
